Prevent horizontal scrollbar for legend outside screen

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -66,6 +66,7 @@ body {
     display: flex;
     flex-direction: column;
     background-color: #fff2db;
+    overflow-x: hidden;
 }
 
 .roman_display {
